@@ -196,10 +196,7 @@ int	main(int argc, char **argv) {
 	}
 	checkSuccess(field->catalog_length,3);
 	checkSuccess(field->def_length,0);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->decimals,0);
 	if (argc==2) {
 		checkSuccess(field->charsetnr,63);
@@ -211,10 +208,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,1);
 	checkSuccess(field->name,"testsmallint");
 	checkSuccess(field->length,6);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_SHORT);
 	stdoutput.printf("\n");
 
@@ -222,10 +216,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,2);
 	checkSuccess(field->name,"testmediumint");
 	checkSuccess(field->length,9);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_INT24);
 	stdoutput.printf("\n");
 
@@ -233,10 +224,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,3);
 	checkSuccess(field->name,"testint");
 	checkSuccess(field->length,11);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_LONG);
 	stdoutput.printf("\n");
 
@@ -244,10 +232,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,4);
 	checkSuccess(field->name,"testbigint");
 	checkSuccess(field->length,20);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_LONGLONG);
 	stdoutput.printf("\n");
 
@@ -255,10 +240,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,5);
 	checkSuccess(field->name,"testfloat");
 	checkSuccess(field->length,12);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_FLOAT);
 	stdoutput.printf("\n");
 
@@ -266,10 +248,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,6);
 	checkSuccess(field->name,"testreal");
 	checkSuccess(field->length,22);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_DOUBLE);
 	stdoutput.printf("\n");
 
@@ -277,10 +256,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,7);
 	checkSuccess(field->name,"testdecimal");
 	checkSuccess(field->length,4);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_NEWDECIMAL);
 	checkSuccess(field->decimals,1);
 	stdoutput.printf("\n");
@@ -289,10 +265,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,8);
 	checkSuccess(field->name,"testdate");
 	checkSuccess(field->length,10);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BINARY_FLAG);
-	}
+	checkSuccess(field->flags,BINARY_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_DATE);
 	stdoutput.printf("\n");
 
@@ -300,10 +273,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,9);
 	checkSuccess(field->name,"testtime");
 	checkSuccess(field->length,10);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BINARY_FLAG);
-	}
+	checkSuccess(field->flags,BINARY_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_TIME);
 	stdoutput.printf("\n");
 
@@ -311,10 +281,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,10);
 	checkSuccess(field->name,"testdatetime");
 	checkSuccess(field->length,19);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BINARY_FLAG);
-	}
+	checkSuccess(field->flags,BINARY_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_DATETIME);
 	stdoutput.printf("\n");
 
@@ -322,10 +289,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,11);
 	checkSuccess(field->name,"testyear");
 	checkSuccess(field->length,4);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,NUM_FLAG|UNSIGNED_FLAG|ZEROFILL_FLAG);
-	}
+	checkSuccess(field->flags,NUM_FLAG|UNSIGNED_FLAG|ZEROFILL_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_YEAR);
 	stdoutput.printf("\n");
 
@@ -333,10 +297,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,12);
 	checkSuccess(field->name,"testchar");
 	checkSuccess(field->length,40);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,0);
-	}
+	checkSuccess(field->flags,0);
 	checkSuccess(field->type,MYSQL_TYPE_STRING);
 	stdoutput.printf("\n");
 
@@ -344,10 +305,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,13);
 	checkSuccess(field->name,"testtext");
 	checkSuccess(field->length,65535);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BLOB_FLAG);
-	}
+	checkSuccess(field->flags,BLOB_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_BLOB);
 	stdoutput.printf("\n");
 
@@ -355,10 +313,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,14);
 	checkSuccess(field->name,"testvarchar");
 	checkSuccess(field->length,40);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,0);
-	}
+	checkSuccess(field->flags,0);
 	checkSuccess(field->type,MYSQL_TYPE_VAR_STRING);
 	stdoutput.printf("\n");
 
@@ -366,10 +321,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,15);
 	checkSuccess(field->name,"testtinytext");
 	checkSuccess(field->length,255);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BLOB_FLAG);
-	}
+	checkSuccess(field->flags,BLOB_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_BLOB);
 	stdoutput.printf("\n");
 
@@ -377,10 +329,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,16);
 	checkSuccess(field->name,"testmediumtext");
 	checkSuccess(field->length,16777215);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BLOB_FLAG);
-	}
+	checkSuccess(field->flags,BLOB_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_BLOB);
 	stdoutput.printf("\n");
 
@@ -388,10 +337,7 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,17);
 	checkSuccess(field->name,"testlongtext");
 	checkSuccess(field->length,-1);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,BLOB_FLAG);
-	}
+	checkSuccess(field->flags,BLOB_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_BLOB);
 	stdoutput.printf("\n");
 
@@ -399,12 +345,9 @@ int	main(int argc, char **argv) {
 	field=mysql_fetch_field_direct(result,18);
 	checkSuccess(field->name,"testtimestamp");
 	checkSuccess(field->length,19);
-	// FIXME: flags are wrong in drop-in library
-	if (charstring::isNullOrEmpty(environment::getValue("LD_PRELOAD"))) {
-		checkSuccess(field->flags,
-				TIMESTAMP_FLAG|ON_UPDATE_NOW_FLAG|
-				BINARY_FLAG|UNSIGNED_FLAG|NOT_NULL_FLAG);
-	}
+	checkSuccess(field->flags,
+			TIMESTAMP_FLAG|ON_UPDATE_NOW_FLAG|
+			BINARY_FLAG|UNSIGNED_FLAG|NOT_NULL_FLAG);
 	checkSuccess(field->type,MYSQL_TYPE_TIMESTAMP);
 	mysql_free_result(result);
 	stdoutput.printf("\n");
